--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -27,6 +27,21 @@ body {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        &.container-header {
+            width: max-content;
+        }
+
+        &.container-home {
+            width: initial;
+        }
+
+        &.container-footer {
+            width: initial;
+        }
+    }
 }
 
 .link {
