--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,6 +7,7 @@
 
 html {
     font-size: 10px;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -15,6 +16,23 @@ body {
     font-family: 'Inter', sans-serif;
     background-color: #f5f5f5;
     color: rgba(0, 0, 0, 0.8);
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+html::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+html::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+    background: #ee4d2d;
+    border-radius: 50px;
 }
 
 * {
@@ -31,7 +49,7 @@ body {
 
     @media screen and (min-width: 320px) and (max-width: 767px) {
         &.container-header {
-            width: max-content;
+            width: initial;
         }
 
         &.container-home {
@@ -39,6 +57,10 @@ body {
         }
 
         &.container-footer {
+            width: initial;
+        }
+
+        &.container-productDetail {
             width: initial;
         }
     }
